classDiagram
    direction TB

    %% Enums
    class PaymentStatus {
        <<enumeration>>
        INCOMPLETE
        COMPLETE
        REFUNDED
    }

    class PaymentMethod {
        <<enumeration>>
        ONLINE
        IN_PERSON
    }

    %% Main App Models
    class Transaction {
        +ForeignKey user
        +CharField stripe_session_id
        +PositiveIntegerField total_amount_cents
        +CharField payment_status
        +CharField payment_method
        +DateTimeField created_at
        +DateTimeField updated_at
        +str()
    }

    %% External Cross-App References
    class EventRegistration {
        <<external>>
    }

    %% Establishing Data Relationships
    Transaction ..> PaymentStatus : choices
    Transaction ..> PaymentMethod : choices

    %% Cross-App Hooks
    Transaction "0..1" o-- "1..*" EventRegistration : registrations (transaction)

    %% STYLING: Nordic Minimalist
    %% Core Transaction Entities (Deep Slate Blue)
    style Transaction fill:#2f3e46,stroke:#354f52,stroke-width:2px,color:#fff
    
    %% Choices Enums (Muted Sand/Cream)
    style PaymentStatus fill:#f4f1de,stroke:#e07a5f,stroke-width:1px,color:#3d405b
    style PaymentMethod fill:#f4f1de,stroke:#e07a5f,stroke-width:1px,color:#3d405b

    %% External Dependencies (Light Charcoal / Gray Border)
    style EventRegistration fill:#4a5759,stroke:#354f52,stroke-width:1px,color:#fff